// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Render Correctly 1`] = `
<div
  className="css-1aih96i"
>
  <button
    className="css-63u5ql"
    onClick={[Function]}
    type="button"
  >
    Sample Button
  </button>
</div>
`;

exports[`Button Shows Disabled State 1`] = `
<div
  className="css-1aih96i"
>
  <button
    className="css-63u5ql"
    onClick={[Function]}
    type="button"
  >
    Sample Button with Disabled State
  </button>
</div>
`;

exports[`Button Shows Loading State 1`] = `
<div
  className="css-1aih96i"
>
  <button
    className="css-63u5ql"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <img
      src="/loading.gif"
      width="6%"
    />
  </button>
</div>
`;

exports[`Button Shows buttonType Secondary 1`] = `
<div
  className="css-1aih96i"
>
  <button
    className="css-omad6e"
    onClick={[Function]}
    type="button"
  >
    Sample Button with Secondary Style
  </button>
</div>
`;
